@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.3.0
-  *) [TS-538] Remove deprecates INKStats API
+  *) [TS-1350] Detect and prefer LuaJIT
+
+  *) [TS-538] Remove deprecated INKStats API
 
   *) [TS-1345] fix signed/unsigned compilation issues in Vec
 
